@@ -7,22 +7,22 @@
  **/
 
 static unsigned short gmime_special_table[256] = {
-	  5,  5,  5,  5,  5,  5,  5,  5,  5,103,  7,  5,  5, 39,  5,  5,
-	  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,
-	242,960, 76,704,704,192,704,192, 76, 76,448,960, 76,960,584,324,
-	960,960,960,960,960,960,960,960,960,960, 76, 76, 76,260, 76, 68,
-	 76,960,960,960,960,960,960,960,960,960,960,960,960,960,960,960,
-	960,960,960,960,960,960,960,960,960,960,960,108,236,108,704,832,
-	704,960,960,960,960,960,960,960,960,960,960,960,960,960,960,960,
-	960,960,960,960,960,960,960,960,960,960,960,704,704,704,704,  5,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,
-	  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0
+	   5,   5,   5,   5,   5,   5,   5,   5,   5,1127,   7,   5,   5,  39,   5,   5,
+	   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,
+	1266, 960,  76, 704, 704, 192, 704, 192,  76,  76, 448, 960,  76, 960, 584, 324,
+	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,  76,  76,  76, 260,  76,  68,
+	  76, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,
+	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 108, 236, 108, 704, 832,
+	 704, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,
+	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 704, 704, 704, 704,   5,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
+	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0
 };
 
 enum {
@@ -33,9 +33,12 @@ enum {
 	IS_SPACE    = (1 << 4),
 	IS_DSPECIAL = (1 << 5),
 	IS_QPSAFE   = (1 << 6),
-	IS_ESAFE    = (1 << 7), /* encoded word safe */
-	IS_PSAFE    = (1 << 8), /* encode word in phrase safe */
-	IS_ATTRCHAR = (1 << 9)  /* attribute-char from rfc2184 */
+	IS_ESAFE    = (1 << 7),  /* encoded word safe */
+	IS_PSAFE    = (1 << 8),  /* encode word in phrase safe */
+	IS_ATTRCHAR = (1 << 9),  /* attribute-char from rfc2184 */
+	
+	/* ctype replacements */
+	IS_BLANK    = (1 << 10), /* space or tab */
 };
 
 #define is_ctrl(x) ((gmime_special_table[(unsigned char)(x)] & IS_CTRL) != 0)
@@ -50,6 +53,9 @@ enum {
 #define is_especial(x) ((gmime_special_table[(unsigned char)(x)] & IS_ESAFE) != 0)
 #define is_psafe(x) ((gmime_special_table[(unsigned char)(x)] & IS_PSAFE) != 0)
 #define is_attrchar(x) ((gmime_special_table[(unsigned char)(x)] & IS_ATTRCHAR) != 0)
+
+/* ctype replacements */
+#define is_blank(x) ((gmime_special_table[(unsigned char)(x)] & IS_BLANK) != 0)
 
 #define CHARS_LWSP " \t\n\r"               /* linear whitespace chars */
 #define CHARS_TSPECIAL "()<>@,;:\\\"/[]?="
